--- a/androidansiapp/src/main/res/layout/activity_main.xml
+++ b/androidansiapp/src/main/res/layout/activity_main.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <com.fox2code.androidansi.AnsiTextView
+        android:id="@+id/ansiView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/ansiView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
